--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,9 +30,6 @@ jobs:
         pip install -r requirements.txt
     - name: Build and publish
       env:
-        USERID: ${{ secrets.USERID }}
-        PASSWORD: ${{ secrets.PASSWORD }}
-        SEND: ${{ secrets.SEND }}
-        DATA: ${{ secrets.DATA }}
+        USERINFO: ${{ secrets.USERINFO }}
       run: |
         python main.py
